@@ -1,1 +1,2 @@
 DIST ovirt-log-collector-3.2.1.tar.gz 368770 SHA256 0ee7f0293ec7f32f549a82fbf75cce50749f5fac37bc124b473b9150475b63ee SHA512 12f2f24a61a6b50bff4183ad405b05258d8718dfd2a80b3cd3f99a6453b17a08941e5572d961b4cd2202a5bab184574ef67d35f098503cdbe6ba8430e6a9f304 WHIRLPOOL 792c7d19b2dff03db91a1105cae62b9fe84fe7970cc8d9c55a706e43548a65b1d688e78a6eb10c45bedddd6aa6904a7bf5f283cbbcc0297a44d98ed3aef77172
+DIST ovirt-log-collector-3.4.1.tar.gz 200751 SHA256 5e74ea4384a8d27c14d6ff81b32c7471807fdf54944498939acb1274da0751d3 SHA512 d15a06f07f995b52a5fff599a2a58e04c79ed690ce83561ec5749bc4eb3eb28a3656cb8cffe6d05893a7faa8b719b1c127809bd3662c5b7e68233d95ec39f703 WHIRLPOOL 69d5bc75aec56ca8bbf501f87ec2f981179e635946d346b576c59c477459c4da85032774acc7e7806c7d71b535dbaba351ced84fdafe7e0d451befcfb6e7f404
