@@ -1,16 +1,16 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
 
-inherit python-r1 autotools git-2
+inherit python-r1
+inherit autotools git-2
 
 DESCRIPTION="Log collector for the Open Virtualization Manager"
 HOMEPAGE="http://gerrit.ovirt.org"
 EGIT_REPO_URI="git://gerrit.ovirt.org/${PN}"
-EGIT_BRANCH="master"
 
 LICENSE="Apache-2.0"
 SLOT="0"
